--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
 <h1 class="text-center"> Welcome on Flykke! </h1>
 
+<%= link_to 'Post a new creation', new_post_path, :class=>"btn btn-default" %>
+
 
