--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,24 +24,19 @@
       <hr>
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <%= image_tag "http://placehold.it/30x30", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <%= image_tag (current_user.picture ? current_user.picture : current_user.picture.url(:thumb)), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t ".profile", default: "Profile" %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-home"></i>  <%= t ".profile", default: "Home" %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t ".sign_out", default: "Log out" %>
-              <% end %>
-            </li>
-          </ul>
+             <li>
+               <%= link_to do %>
+                 <i class="fa fa-user"></i> <%= t ".profile", default: "Mon profil" %>
+               <% end %>
+             </li>
+             <li>
+               <%= link_to destroy_user_session_path, method: :delete do %>
+                 <i class="fa fa-sign-out"></i>  <%= t ".profile", default: "Se déconnecter" %>
+             <% end %>
+             </li>
+           </ul>
         </div>
       </div>
     <% else %>
