--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,43 +6,45 @@
     <% end %>
 
     <div class="navbar-wagon-pusher"></div>
+      <% if current_user  == nil %>
 
-    <form action="" class="navbar-wagon-search hidden-xs hidden-sm">
-      <input type="text" class="navbar-wagon-search-input" placeholder="Search something">
-      <button type="submit" class="navbar-wagon-search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-    </form>
-    <hr class="hidden-xs hidden-sm">
-    <% if user_signed_in? %>
-      <%= link_to "#", class: "navbar-wagon-item navbar-wagon-link hidden-xs" do %>
-        <div class="icon-badge-container">
-          <i class="fa fa-envelope-o"></i>
-          <div class="icon-badge icon-badge-blue">3</div>
+          <div class="navbar-wagon-item hidden-xs hidden-sm ">
+            <div class="dropdown">
+              <%= link_to "Log in", new_user_session_path %>
+            </div>
+          </div>
+          <div class="navbar-wagon-item hidden-xs hidden-sm">
+            <div class="dropdown">
+              <%= link_to "Sign up", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-button btn"  %>
+            </div>
+          </div>
+
+      <% else %>
+
+        <div class="navbar-wagon-item hidden-xs hidden-sm">
+          <div class="dropdown">
+            <%= image_tag (current_user.picture ? current_user.picture : current_user.picture.url(:thumb)), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+
+            <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+              <li>
+                <%= link_to  do %>
+                  <i class="fa fa-user"></i> <%= t ".profile", default: "My profile" %>
+                <% end %>
+              </li>
+              <li>
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                  <i class="fa fa-sign-out"></i>  <%= t ".profile", default: "Log out" %>
+                <% end %>
+              </li>
+            </ul>
+
+          </div>
         </div>
+
+        <hr class="hidden-xs hidden-sm">
+
+        <%= link_to t(".top_call_to_action", default: "Post a new creation"),  new_post_path, class: "navbar-wagon-item hidden-xs hidden-sm navbar-wagon-button btn" %>
       <% end %>
-      <hr>
-      <div class="navbar-wagon-item">
-        <div class="dropdown">
-          <%= image_tag (current_user.picture ? current_user.picture : current_user.picture.url(:thumb)), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-             <li>
-               <%= link_to do %>
-                 <i class="fa fa-user"></i> <%= t ".profile", default: "Mon profil" %>
-               <% end %>
-             </li>
-             <li>
-               <%= link_to destroy_user_session_path, method: :delete do %>
-                 <i class="fa fa-sign-out"></i>  <%= t ".profile", default: "Se déconnecter" %>
-             <% end %>
-             </li>
-           </ul>
-        </div>
-      </div>
-    <% else %>
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <% end %>
-    <hr>
-    <%= link_to t(".top_call_to_action", default: "Post stuff"), "#", class: "navbar-wagon-item navbar-wagon-button btn" %>
+
   </div>
 </nav>
