--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class= "text-center col-xs-6 col-md-offset-3" >
+  <div class= "text-center" >
     <h2>Submit a new creation</h2>
     <br>
 
