adding some style, not convinced but ok to continue

--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -29,6 +29,8 @@
   &-vote-count {
     text-align: center;
     transition: all 0.15s ease;
+    padding: 0px;
+    margin: 0px;
   }
   &-upvote {
     text-align: center;
