--- a/app/assets/stylesheets/components/_media.scss
+++ b/app/assets/stylesheets/components/_media.scss
@@ -4,11 +4,17 @@
   padding: 0px;
   border-radius: 5px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  &-link:hover {
+    text-decoration: none;
+  }
+  &-img-user {
+    margin: 0px;
+  }
   &-body {
     background: white;
   }
   &-section {
-    padding: 10px;
+    padding: 5px;
     &:first-child {
       margin-top: 0;
     }
@@ -33,9 +39,25 @@
   h1, h2, h3, h4 {
     padding: 0px;
     margin: 0px;
+    color: black;
+  }
+
+  h2 {
+    padding: 5px;
+    padding-bottom: 10px;
+    font-size: 20px;
   }
 
   h3 {
-    font-size: 20px;
+    padding: 5px;
+    padding-bottom: 5px;
+    font-size: 18px;
+  }
+
+  h4 {
+    padding: 5px;
+    padding-bottom: 5px;
+    font-size: 16px;
+    color: $gray-dark;
   }
 }
