--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -34,7 +34,7 @@ $green: #32B796;
 
 // Gray scale
 $gray-darker:  lighten(#000, 13.5%); // #222
-$gray-dark:    lighten(#000, 20%);   // #333
+$gray-dark:    #9197A3;   // #333
 $gray:         #D5D5D9; // #555
 $gray-light:   #F6F7F8;
 $gray-lighter: #E9EAED; // #eee
