--- a/app/views/posts/_listing.html.erb
+++ b/app/views/posts/_listing.html.erb
@@ -15,6 +15,7 @@
 <div class="row">
   <% posts.each do |post| %>
     <div class="row">
+
     <div class="media col-xs-8 col-md-offset-2">
       <div class="media-body">
         <%= link_to post.url, :target => "_blank", class: "media-link" do %>
@@ -73,9 +74,26 @@
         </section>
       </div>
     </div>
+
+    <div class="col-xs-8 col-md-offset-2">
+      <div class="media-comments">
+        <div class="comments-logo">
+            <h3 id="comment_title">
+              <i class="fa fa-comment"> <%= render 'posts/comment_title', comments: post.comments %></i>
+            </h3>
+        </div>
+        <div id="comments">
+          <% post.comments.each do |comment| %>
+            <%= render 'comments/comment', comment: comment %>
+          <% end %>
+        </div>
+        <div class="form">
+          <%= render 'comments/form', post: post, comment: Comment.new %>
+        </div>
+    </div>
+
     </div>
     <% if current_user == post.user %>
-      <%= link_to 'Edit', edit_post_path(post) %>
       <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
     <% end %>
   <% end %>
