--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -24,11 +24,12 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #D23333;
+$brand-color: #FCE900;
 
 $red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
+$blue: #41C8F2;
+$white-blue: #EBF7F7;
+$yellow: #FCE900;
 $orange: #E67E22;
 $green: #32B796;
 
