--- a/app/assets/stylesheets/components/_media.scss
+++ b/app/assets/stylesheets/components/_media.scss
@@ -3,6 +3,10 @@
   border: $gray 1px solid;
   padding: 0px;
   border-radius: 5px;
+  &-profile-picture {
+     margin-left: auto;
+    margin-right: auto;
+  }
   &-link:hover {
     text-decoration: none;
   }
@@ -13,7 +17,7 @@
     background: white;
   }
   &-section {
-    padding: 5px;
+    padding-top: 5px;
     &:first-child {
       margin-top: 0;
     }
@@ -57,6 +61,6 @@
     padding: 5px;
     padding-bottom: 5px;
     font-size: 16px;
-    color: $gray-dark;
+    color: $white-blue;
   }
 }
