--- a/app/views/posts/_listing.html.erb
+++ b/app/views/posts/_listing.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
   <div class= "text-center" >
-    <h4 class="text-center">Choose a category of content to browse</h4>
-    <button type="button" class="btn btn-default post-category" id="charity-cat">All</button>
-    <button type="button" class="btn btn-default post-category" id="charity-cat">Charity</button>
-    <button type="button" class="btn btn-default post-category" id="music-cat">Music</button>
-    <button type="button" class="btn btn-default post-category" id="news-cat">News</button>
-    <button type="button" class="btn btn-default post-category" id="photos-cat">Photos</button>
-    <button type="button" class="btn btn-default post-category" id="videos-cat">Videos</button>
+    <h4 class="text-center">Choose a category of content to browse</h4><br>
+    <button type="button" class="navbar-wagon-button btn post-category" id="charity-cat">All</button>
+    <button type="button" class="navbar-wagon-button btn post-category" id="charity-cat"><i class="fa fa-globe"></i>  Charity</button>
+    <button type="button" class="navbar-wagon-button btn post-category" id="music-cat"><i class="fa fa-music"></i>  Music</button>
+    <button type="button" class="navbar-wagon-button btn post-category" id="news-cat"><i class="fa fa-newspaper-o"></i>  News</button>
+    <button type="button" class="navbar-wagon-button btn post-category" id="photos-cat"><i class="fa fa-camera"></i>  Photos</button>
+    <button type="button" class="navbar-wagon-button btn post-category" id="videos-cat"><i class="fa fa-video-camera"></i>  Videos</button>
   </div>
 </div>
 
@@ -14,8 +14,6 @@
 
 <div class="row">
   <% posts.each do |post| %>
-    <div class="row">
-
     <div class="media col-xs-8 col-md-offset-2">
       <div class="media-body">
         <%= link_to post.url, :target => "_blank", class: "media-link" do %>
@@ -36,10 +34,9 @@
         <% end %>
       </div>
 
-
       <div class="media-aside">
         <section class="media-section text-center">
-          <img src="<%= post.user.picture %>" alt="book-cover" class="media left result-img img-responsive">
+          <img src="<%= post.user.picture %>" alt="book-cover" class="media media-profile-picture result-img img-responsive">
           <small><%= time_ago_in_words(post.created_at) %> ago - by <%= post.user.first_name %> <%= post.user.last_name %> </small>
         </section>
         <section class="media-section">
@@ -75,21 +72,32 @@
       </div>
     </div>
 
-    <div class="col-xs-8 col-md-offset-2">
-      <div class="media-comments">
-        <div class="comments-logo">
-            <h3 id="comment_title">
-              <i class="fa fa-comment"> <%= render 'posts/comment_title', comments: post.comments %></i>
-            </h3>
-        </div>
-        <div id="comments">
-          <% post.comments.each do |comment| %>
-            <%= render 'comments/comment', comment: comment %>
-          <% end %>
-        </div>
-        <div class="form">
-          <%= render 'comments/form', post: post, comment: Comment.new %>
-        </div>
+    <div class="card col-xs-8 col-md-offset-2">
+      <div class="card paper">
+        <details>
+          <summary style="padding:1em;">
+            <div class="comments-logo">
+                <h4 id="comment_title">
+                  <i class="fa fa-comment"> <%= render 'posts/comment_title', comments: post.comments %></i>
+                </h4>
+            </div>
+          </summary>
+
+          <div id="comments">
+            <% post.comments.each do |comment| %>
+              <%= render 'comments/comment', comment: comment %>
+              <%= render 'comments/last_comment', comment: comment %>
+            <% end %>
+          </div>
+          <div class="form">
+            <%= render 'comments/form', post: post, comment: Comment.new %>
+          </div>
+        </details>
+
+
+
+
+      </div>
     </div>
 
     </div>
