--- a/app/views/posts/_listing.html.erb
+++ b/app/views/posts/_listing.html.erb
@@ -45,30 +45,7 @@
           ...
         </section>
         <section class="media-section">
-          <div class="post">
-            <div class='post-upvote'>
-              <%= link_to upvote_post_path(post), method: :put do %>
-                <div class="post-upvote-arrow">
-                </div>
-              <% end %>
-              <% if post.get_upvotes.size > 1 %>
-                <h3 class="post-vote-count"><%= post.get_upvotes.size %> votes</h3>
-              <% else %>
-                <h3 class="post-vote-count"><%= post.get_upvotes.size %> vote</h3>
-              <% end %>
-              <%= link_to downvote_post_path(post), method: :put do %>
-                <div class="post-downvote-arrow">
-                </div>
-              <% end %>
-            </div>
-        </section>
-        <section class="media-section">
-          <%= button_to "Flykke", flykke_post_path(post), class: "btn btn-primary", :method => :put %>
-          <% if post.get_likes(:vote_scope => 'flykke').size > 1 %>
-                <h3 class="post-vote-count"><%= post.get_likes(:vote_scope => 'flykke').size %> flykkes given</h3>
-              <% else %>
-                <h3 class="post-vote-count"><%= post.get_likes(:vote_scope => 'flykke').size %> flykke given</h3>
-              <% end %>
+          <%= render 'likes/form', post: post %>
         </section>
       </div>
     </div>
@@ -100,7 +77,6 @@
       </div>
     </div>
 
-    </div>
     <% if current_user == post.user %>
       <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
     <% end %>
