travail sur la mise en place du code dans les différentes partielles du dossier public_activity

--- a/app/views/public_activity/follow/_create.html.erb
+++ b/app/views/public_activity/follow/_create.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="followee">
     <%= render 'shared/avatar', user: activity.trackable.followable %>
-    <h4 class="name"><%= activity.trackable.followable.first_name %></h4>
+    <h4 class="name"><%= activity.trackable.followable.first_name %> <%= activity.trackable.followable.last_name %></h4>
+    <%= render 'shared/created_at', activity: activity %>
   </div>
-  <%= render 'shared/created_at', activity: activity %>
 </div>
