--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -11,7 +11,7 @@
   }
   &-logo {
     width: 140px;
-
+    margin: 0 auto;
   }
   &-container {
     display: flex;
@@ -121,4 +121,7 @@
   }
 }
 
+.center {
+  margin: 0 auto;
+}
 
