--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,22 @@
  * SASS code SPECIFIC TO your home page
  * (margin/padding adjustments, background image, etc..)
  * ------------------------------------- */
+
+ #newsfeed {
+  margin-top: 70px;
+ }
+
+// .fixed {
+//   position: fixed;
+//   top: 50%;
+//   left: 50%;
+// }
+
+// .with-fixed {
+//   position: absolute;
+//   margin-top: 200px;
+// }
+
+#activities {
+  margin-top: 40px;
+}
