--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   </head>
   <body>
-    <%= render 'shared/navbar' %>
-    <%= render 'shared/flashes' %>
-    <%= yield %>
-    <%= javascript_include_tag 'application' %>
-    <%= yield(:after_js) %>
+    <div id="wrapper">
+      <!-- Sidebar -->
+      <%= render 'shared/sidebar' %>
+
+      <!-- Page Content -->
+      <div id="page-content-wrapper">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12">
+              <%= render 'shared/navbar' %>
+              <%= render 'shared/flashes' %>
+              <%= yield %>
+              <%= javascript_include_tag 'application' %>
+              <%= yield(:after_js) %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /#page-content-wrapper -->
+    </div>
   </body>
 </html>
+
