--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,13 @@
-<nav class="navbar-wagon">
+<nav class="navbar-wagon-fixed">
   <div class="container navbar-wagon-container">
 
-    <%= link_to root_path do %>
-      <%= image_tag "logo.png", class: "navbar-wagon-logo" %>
-    <% end %>
+      <%= link_to root_path do %>
+        <%= image_tag "logo.png", class: "navbar-wagon-logo" %>
+      <% end %>
+
 
     <div class="navbar-wagon-pusher"></div>
       <% if current_user  == nil %>
-
           <div class="navbar-wagon-item hidden-xs hidden-sm ">
             <div class="dropdown">
               <%= link_to "Log in", new_user_session_path %>
@@ -18,31 +18,7 @@
               <%= link_to "Sign up", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-button btn"  %>
             </div>
           </div>
-
       <% else %>
-
-        <div class="navbar-wagon-item hidden-xs hidden-sm">
-          <div class="dropdown">
-            <%= image_tag (current_user.picture ? current_user.picture : current_user.picture.url(:thumb)), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
-
-            <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-              <li>
-                <%= link_to  do %>
-                  <i class="fa fa-user"></i> <%= t ".profile", default: "My profile" %>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to destroy_user_session_path, method: :delete do %>
-                  <i class="fa fa-sign-out"></i>  <%= t ".profile", default: "Log out" %>
-                <% end %>
-              </li>
-            </ul>
-
-          </div>
-        </div>
-
-        <hr class="hidden-xs hidden-sm">
-
         <%= link_to t(".top_call_to_action", default: "Post a new creation"),  new_post_path, class: "navbar-wagon-item hidden-xs hidden-sm navbar-wagon-button btn" %>
       <% end %>
 
