--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -10,3 +10,13 @@
     border-right: 1px solid white;
   }
 }
+
+.btn-follow {
+  border: none;
+  border-radius: 5%;
+  padding: 8px 25px;
+}
+
+.follow {
+    display: inline-block;
+}
