--- a/app/views/public_activity/post/_create.html.erb
+++ b/app/views/public_activity/post/_create.html.erb
@@ -1,3 +1,5 @@
-<div id="post-<%= activity.trackable.id %>" class="activity-post">
-  <%= render activity.trackable, remote: true %>
-</div>
+<% if activity.trackable.present? %>
+  <div id="post-<%= activity.trackable.id %>" class="activity-post">
+    <%= render activity.trackable, remote: true %>
+  </div>
+<% end %>
