--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,13 +1,19 @@
 .navbar-wagon {
   // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background-color: transparent;
+
   transition: all 0.3s ease;
   &-fixed {
     position: fixed;
     left: 0px;
     top: 0px;
-    z-index: 1;
+    z-index: 1000;
     width: 100%;
+    background: linear-gradient(#43C9F2, $white-blue) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    // background-color: ;
   }
   &-logo {
     width: 140px;
@@ -36,7 +42,7 @@
       line-height: 40px;
       color: $white-blue;
       border: none;
-      background: transparent;
+      background: #43C9F2;
       position: absolute;
       right: 14px;
       top: -2px;
