--- a/app/views/follows/_form.html.erb
+++ b/app/views/follows/_form.html.erb
@@ -1,11 +1,11 @@
 <div class="follow">
   <% if user.followed_by?(current_user) %>
     <%= form_tag unfollow_path(user_id: user.id), method: :post, remote: true do %>
-      <%= button_tag 'unfollow', class: 'btn btn-primary' %>
+      <%= button_tag 'unfollow', class: 'btn btn-primary btn-unfollow' %>
     <% end %>
   <% else %>
     <%= form_tag follow_path(user_id: user.id), method: :post, remote: true do %>
-      <%= button_tag 'follow', class: 'btn btn-success' %>
+      <%= button_tag 'follow', class: 'btn btn-primary btn-follow' %>
     <% end %>
   <% end %>
 
