--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,17 @@
   <body>
     <div id="wrapper">
       <!-- Sidebar -->
-      <%= render 'shared/sidebar' %>
+      <%= render 'shared/sidebar', user: @user %>
 
       <!-- Page Content -->
       <div id="page-content-wrapper">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-12">
-              <%= render 'shared/navbar' %>
-              <%= render 'shared/flashes' %>
-              <%= yield %>
-              <%= javascript_include_tag 'application' %>
-              <%= yield(:after_js) %>
-            </div>
+        <div class="row">
+          <div class="col-lg-12 page-content">
+            <%= render 'shared/navbar' %>
+            <%= render 'shared/flashes' %>
+            <%= yield %>
+            <%= javascript_include_tag 'application' %>
+            <%= yield(:after_js) %>
           </div>
         </div>
       </div>
