work on post design

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -20,3 +20,16 @@
 .follow {
     display: inline-block;
 }
+
+.btn-flykke {
+  border: none;
+  border-radius: 5px;
+  color: yellow;
+  padding: 8px 25px;
+  font: artista 2.0;
+
+}
+
+.logo-mini {
+  width: 115px;
+}
