--- a/app/assets/stylesheets/components/_comment_box.scss
+++ b/app/assets/stylesheets/components/_comment_box.scss
@@ -1,6 +1,9 @@
 #comment_title {
   margin-top: 0;
   margin-bottom: 0;
+  color: $gray-dark;
+  display: inline-block;
+  margin: 0px 10px 0px 10px;
 }
 
 a{
@@ -25,12 +28,13 @@ a{
   }
 
   .card{
-    border: none !important;
+    border-left: $gray 1px solid;
+    border-right: $gray 1px solid;
+    border-bottom: $gray 1px solid;
     background-color: #fff;
     overflow: hidden;
-
+    border-radius: 0px 0px 5px 5px;
     padding: 0px;
-    border-radius: 5px;
   }
 
   .paper {
@@ -196,3 +200,29 @@ a{
   .form-control:focus{
     border-color: rgba(3, 161, 241, 1) !important;
   }
+
+  .field {
+    background-color: white;
+    border: 1px solid $gray;
+    -webkit-appearance: none;
+    appearance: none;
+    display: inline-block;
+    position: relative;
+    left: 47px;
+    top: -10px;
+    width: 94%;
+    padding: 0px;
+  }
+
+  .comments-logo {
+    padding: 0px 0px 5px 0px;
+  }
+
+  .comments-new {
+    padding: 5px 0px 0px 0px;
+    background-color: #f4f4f4;
+  }
+
+#new_comment {
+  padding-bottom: 0px;
+}
