--- a/app/assets/stylesheets/components/_media.scss
+++ b/app/assets/stylesheets/components/_media.scss
@@ -2,7 +2,7 @@
   display: flex;
   border: $gray 1px solid;
   padding: 0px;
-  border-radius: 5px;
+  border-radius: 5px 5px 0px 0px;
   &-profile-picture {
      margin-left: auto;
     margin-right: auto;
@@ -15,6 +15,12 @@
   }
   &-body {
     background: white;
+  }
+  &-btn-delete {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    color: $gray;
   }
   &-section {
     padding-top: 5px;
