--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -2,12 +2,38 @@
   display: flex;
   align-items: center;
   transition: all 0.15s ease;
+  &-flykke-section {
+    position: relative;
+    top: 0px;
+    .button_to {
+      padding-left: 0px;
+    }
+  }
+  &-btn-flykke {
+    position: relative;
+    border: none;
+    border-radius: 5px;
+    color: yellow;
+    padding: 7px;
+    font: artista 2.0;
+  }
   &-upvote {
     flex: 0 0 80px;
+    display: inline-block;
+    margin: 0px 10px 0px 10px;
+    top: 0px;
     h3 {
       font-weight: bold;
       font-size: 23px;
-      margin-top: 11px;
+      display: inline-block;
+      color: $gray-dark;
+    }
+  }
+  &-share {
+    position: relative;
+    top: -15px;
+    &-title {
+      padding-bottom: 0px;
     }
   }
   &-body {
@@ -26,11 +52,16 @@
     &:last-child { border-right: none }
     &:hover { color: $brand-color !important }
   }
-  &-vote-count {
+  &-upvote-count {
     text-align: center;
     transition: all 0.15s ease;
     padding: 0px;
     margin: 0px;
+  }
+  &-vote-count {
+    position: relative;
+    top: -50px;
+    left: 130px;
   }
   &-upvote {
     text-align: center;
@@ -42,9 +73,11 @@
       border-left: 6px solid transparent;
       border-right: 6px solid transparent;
       border-top: 6px solid transparent;
-      border-bottom: 9px solid black;
+      border-bottom: 9px solid $gray-dark;
       border-radius: 2px;
-      margin: auto;
+      margin-bottom: 2px;
+      display: inline-block;
+      color: $gray-dark;
       &:hover {
       border-bottom: 9px solid #5898f1;
       cursor: pointer;
@@ -60,10 +93,12 @@
       height: 0;
       border-left: 6px solid transparent;
       border-right: 6px solid transparent;
-      border-top: 9px solid black;
+      border-top: 9px solid $gray-dark;
       border-bottom: 6px solid transparent;
       border-radius: 2px;
-      margin: auto;
+      margin-bottom: -1px;
+      display: inline-block;
+      color: $gray-dark;
       &:hover {
       border-top: 9px solid #5898f1;
       cursor: pointer;
