--- a/app/views/likes/_form.html.erb
+++ b/app/views/likes/_form.html.erb
@@ -1,29 +1,35 @@
-<div class="post">
-  <div class='post-upvote'>
-    <%= link_to upvote_path(id: post.id), method: :put, remote: true do %>
-      <div class="post-upvote-arrow">
-      </div>
-    <% end %>
+<div class="post-flykke-section">
+  <%= link_to flykke_path(id: post.id), class: "post-btn-flykke btn-primary", :method => :put do %>
+    <%= image_tag("logo-mini.png", :alt => "bird", :class => "logo-mini") %>
+  <% end %>
+  <% if post.get_likes(:vote_scope => 'flykke').size > 1 %>
+    <h3 class="post-vote-count"><%= post.get_likes(:vote_scope => 'flykke').size %> flykkes </h3>
+  <% else %>
+   <h3 class="post-vote-count"><%= post.get_likes(:vote_scope => 'flykke').size %> flykke </h3>
+  <% end %>
+</div>
 
-    <% if post.get_upvotes.size > 1 %>
-      <h3 class="post-vote-count" id="upvote_number"><%= render 'likes/upvote_number', post: post %></h3>
-    <% else %>
-      <h3 class="post-vote-count" id="upvote_number"><%= render 'likes/upvote_number', post: post %></h3>
-    <% end %>
-
-    <%= link_to downvote_path(id: post.id), method: :put do %>
-      <div class="post-downvote-arrow">
-      </div>
-    <% end %>
+<div class="post-share">
+  <h2 class="post-share-title">Share</h2>
+  <div class="share-links">
+    <a href="#" class="share-link bg-facebook">
+      <i class="fa fa-facebook"></i>
+    </a>
+    <a href="#" class="share-link bg-twitter">
+      <i class="fa fa-twitter"></i>
+    </a>
+    <a href="#" class="share-link bg-email">
+      <i class="fa fa-envelope-o"></i>
+    </a>
+    <a href="#" class="share-link bg-text">
+      <i class="fa fa-link"></i>
+    </a>
   </div>
 </div>
 
-<%= button_to "Flykke", flykke_path(id: post.id), class: "btn btn-primary", :method => :put %>
-<% if post.get_likes(:vote_scope => 'flykke').size > 1 %>
-  <h3 class="post-vote-count"><%= post.get_likes(:vote_scope => 'flykke').size %> flykkes given</h3>
-<% else %>
-  <h3 class="post-vote-count"><%= post.get_likes(:vote_scope => 'flykke').size %> flykke given</h3>
-<% end %>
+
+
+
 
 
 
