change colors in variables css

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -2,19 +2,11 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700,700italic,800,800italic|Varela+Round");
 $base-font: "Open Sans", "Helvetica", "sans-serif";
-$header-font: "Raleway", "Helvetica", "sans-serif";
+$header-font: "Varela Round", "Helvetica", "sans-serif";
 
-// Local fonts (uncomment following lines)
-// @font-face {
-//   font-family: "Font Name";
-//   src: font-url('FontFile.eot');
-//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
-//        font-url('FontFile.woff') format('woff'),
-//        font-url('FontFile.ttf') format('truetype')
-// }
-// $my-font: "Font Name";
+
 
 // Font-size and line-height
 $base-size: 16px;
@@ -24,18 +16,19 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #FCE900;
+$brand-color:   #FFF100;
 
-$red: #EE5F5B;
-$blue: #41C8F2;
-$white-blue: #EBF7F7;
-$yellow: #FCE900;
-$orange: #E67E22;
-$green: #32B796;
+$red:           #EE5F5B;
+$blue-darker:   #3285A5;
+$blue:          #61C8F2;
+$white-blue:    #EBF7F7;
+$yellow:        #FFF100;
+$orange:        #E67E22;
+$green:         #32B796;
 
 // Gray scale
-$gray-darker:  lighten(#000, 13.5%); // #222
-$gray-dark:    #9197A3;   // #333
-$gray:         #D5D5D9; // #555
-$gray-light:   #F6F7F8;
-$gray-lighter: #E9EAED; // #eee
+$gray-darker:   #222;
+$gray-dark:     #333;
+$gray:          #555;
+$gray-light:    #999;
+$gray-lighter:  #eee;
