--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -19,9 +19,10 @@ $base-height: 1.4;
 $brand-color:   #FFF100;
 
 $red:           #EE5F5B;
-$blue-darker:   #3285A5;
+$blue-darker:   #00719F;
 $blue:          #61C8F2;
-$white-blue:    #EBF7F7;
+$white-blue:    #D8F4FF;
+$contour-blue:  #B7EAFF;
 $yellow:        #FFF100;
 $orange:        #E67E22;
 $green:         #32B796;
